target/generated-sources/antlr4/KotlinLexerParser.java
// Generated from KotlinLexerParser.g4 by ANTLR 4.10.1

import symtab.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KotlinLexerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUN=1, IF=2, ELSE=3, PRINT=4, PRINTLN=5, VAR=6, INT=7, STRING=8, RETURN=9, 
		READ=10, WHILE=11, ARRAY=12, ARRAYOF=13, DOT=14, COMMA=15, LPAREN=16, 
		RPAREN=17, LSQUARE=18, RSQUARE=19, LCURL=20, RCURL=21, MULT=22, DIV=23, 
		ADD=24, SUB=25, INCR=26, DECR=27, COLON=28, SEMICOLON=29, ASSIGNMENT=30, 
		LANGLE=31, RANGLE=32, LE=33, GE=34, EXCL_EQ=35, EQEQ=36, SINGLE_QUOTE=37, 
		Identifier=38, IntegerLiteral=39, CharacterLiteral=40, StringLiteral=41, 
		DelimitedComment=42, LineComment=43, WS=44, NL=45;
	public static final int
		RULE_start = 0, RULE_block = 1, RULE_statement = 2, RULE_re_assignment = 3, 
		RULE_print = 4, RULE_expr = 5, RULE_ifStatement = 6, RULE_while = 7, RULE_comparison = 8, 
		RULE_variableDeclaration = 9, RULE_arrayDeclaration = 10, RULE_type = 11, 
		RULE_functionArgument = 12, RULE_functionDefinition = 13, RULE_functionCall = 14, 
		RULE_returnStatement = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "block", "statement", "re_assignment", "print", "expr", "ifStatement", 
			"while", "comparison", "variableDeclaration", "arrayDeclaration", "type", 
			"functionArgument", "functionDefinition", "functionCall", "returnStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'fun'", "'if'", "'else'", "'print'", "'println'", "'var'", "'Int'", 
			"'String'", "'return'", "'readLine'", "'while'", "'Array'", "'arrayOf'", 
			"'.'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", "'*'", "'/'", 
			"'+'", "'-'", "'++'", "'--'", "':'", "';'", "'='", "'<'", "'>'", "'<='", 
			"'>='", "'!='", "'=='", "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FUN", "IF", "ELSE", "PRINT", "PRINTLN", "VAR", "INT", "STRING", 
			"RETURN", "READ", "WHILE", "ARRAY", "ARRAYOF", "DOT", "COMMA", "LPAREN", 
			"RPAREN", "LSQUARE", "RSQUARE", "LCURL", "RCURL", "MULT", "DIV", "ADD", 
			"SUB", "INCR", "DECR", "COLON", "SEMICOLON", "ASSIGNMENT", "LANGLE", 
			"RANGLE", "LE", "GE", "EXCL_EQ", "EQEQ", "SINGLE_QUOTE", "Identifier", 
			"IntegerLiteral", "CharacterLiteral", "StringLiteral", "DelimitedComment", 
			"LineComment", "WS", "NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KotlinLexerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KotlinLexerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Scope scope;
		public TerminalNode EOF() { return getToken(KotlinLexerParser.EOF, 0); }
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinLexerParserVisitor ) return ((KotlinLexerParserVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUN) {
				{
				{
				setState(32);
				functionDefinition();
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Scope scope;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinLexerParserVisitor ) return ((KotlinLexerParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUN) | (1L << IF) | (1L << PRINT) | (1L << VAR) | (1L << RETURN) | (1L << READ) | (1L << WHILE) | (1L << LPAREN) | (1L << Identifier) | (1L << IntegerLiteral) | (1L << StringLiteral))) != 0)) {
				{
				{
				setState(40);
				statement();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Re_assignmentContext re_assignment() {
			return getRuleContext(Re_assignmentContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public TerminalNode READ() { return getToken(KotlinLexerParser.READ, 0); }
		public TerminalNode LPAREN() { return getToken(KotlinLexerParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(KotlinLexerParser.RPAREN, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinLexerParserVisitor ) return ((KotlinLexerParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				re_assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				print();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				ifStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(49);
				while_();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(50);
				functionDefinition();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(51);
				returnStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(52);
				functionCall();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(53);
				variableDeclaration();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(54);
				arrayDeclaration();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(55);
				expr(0);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(56);
				comparison();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(57);
				match(READ);
				setState(58);
				match(LPAREN);
				setState(59);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Re_assignmentContext extends ParserRuleContext {
		public Scope scope;
		public TerminalNode Identifier() { return getToken(KotlinLexerParser.Identifier, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(KotlinLexerParser.ASSIGNMENT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LSQUARE() { return getToken(KotlinLexerParser.LSQUARE, 0); }
		public TerminalNode IntegerLiteral() { return getToken(KotlinLexerParser.IntegerLiteral, 0); }
		public TerminalNode RSQUARE() { return getToken(KotlinLexerParser.RSQUARE, 0); }
		public Re_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_re_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).enterRe_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).exitRe_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinLexerParserVisitor ) return ((KotlinLexerParserVisitor<? extends T>)visitor).visitRe_assignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Re_assignmentContext re_assignment() throws RecognitionException {
		Re_assignmentContext _localctx = new Re_assignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_re_assignment);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(Identifier);
				setState(63);
				match(ASSIGNMENT);
				setState(64);
				expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				match(Identifier);
				setState(66);
				match(LSQUARE);
				setState(67);
				match(IntegerLiteral);
				setState(68);
				match(RSQUARE);
				setState(69);
				match(ASSIGNMENT);
				setState(70);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(KotlinLexerParser.PRINT, 0); }
		public TerminalNode LPAREN() { return getToken(KotlinLexerParser.LPAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(KotlinLexerParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(KotlinLexerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KotlinLexerParser.COMMA, i);
		}
		public TerminalNode Identifier() { return getToken(KotlinLexerParser.Identifier, 0); }
		public TerminalNode LSQUARE() { return getToken(KotlinLexerParser.LSQUARE, 0); }
		public TerminalNode IntegerLiteral() { return getToken(KotlinLexerParser.IntegerLiteral, 0); }
		public TerminalNode RSQUARE() { return getToken(KotlinLexerParser.RSQUARE, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinLexerParserVisitor ) return ((KotlinLexerParserVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_print);
		int _la;
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(73);
				match(PRINT);
				setState(74);
				match(LPAREN);
				setState(75);
				expr(0);
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(76);
					match(COMMA);
					setState(77);
					expr(0);
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(83);
				match(RPAREN);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(PRINT);
				setState(86);
				match(LPAREN);
				setState(87);
				match(Identifier);
				setState(88);
				match(LSQUARE);
				setState(89);
				match(IntegerLiteral);
				setState(90);
				match(RSQUARE);
				setState(91);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Token oper;
		public TerminalNode IntegerLiteral() { return getToken(KotlinLexerParser.IntegerLiteral, 0); }
		public TerminalNode StringLiteral() { return getToken(KotlinLexerParser.StringLiteral, 0); }
		public TerminalNode Identifier() { return getToken(KotlinLexerParser.Identifier, 0); }
		public TerminalNode LPAREN() { return getToken(KotlinLexerParser.LPAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(KotlinLexerParser.RPAREN, 0); }
		public TerminalNode READ() { return getToken(KotlinLexerParser.READ, 0); }
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public TerminalNode LSQUARE() { return getToken(KotlinLexerParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(KotlinLexerParser.RSQUARE, 0); }
		public TerminalNode MULT() { return getToken(KotlinLexerParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(KotlinLexerParser.DIV, 0); }
		public TerminalNode ADD() { return getToken(KotlinLexerParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(KotlinLexerParser.SUB, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinLexerParserVisitor ) return ((KotlinLexerParserVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(95);
				match(IntegerLiteral);
				}
				break;
			case 2:
				{
				setState(96);
				match(StringLiteral);
				}
				break;
			case 3:
				{
				setState(97);
				match(Identifier);
				}
				break;
			case 4:
				{
				setState(98);
				match(LPAREN);
				setState(99);
				expr(0);
				setState(100);
				match(RPAREN);
				}
				break;
			case 5:
				{
				setState(102);
				match(READ);
				setState(103);
				match(LPAREN);
				setState(104);
				match(RPAREN);
				}
				break;
			case 6:
				{
				setState(105);
				while_();
				}
				break;
			case 7:
				{
				setState(106);
				match(Identifier);
				setState(107);
				match(LSQUARE);
				setState(108);
				match(IntegerLiteral);
				setState(109);
				match(RSQUARE);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(118);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(112);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(113);
						((ExprContext)_localctx).oper = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==MULT || _la==DIV) ) {
							((ExprContext)_localctx).oper = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(114);
						expr(10);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(115);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(116);
						((ExprContext)_localctx).oper = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==ADD || _la==SUB) ) {
							((ExprContext)_localctx).oper = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(117);
						expr(9);
						}
						break;
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(KotlinLexerParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(KotlinLexerParser.LPAREN, 0); }
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(KotlinLexerParser.RPAREN, 0); }
		public List<TerminalNode> LCURL() { return getTokens(KotlinLexerParser.LCURL); }
		public TerminalNode LCURL(int i) {
			return getToken(KotlinLexerParser.LCURL, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> RCURL() { return getTokens(KotlinLexerParser.RCURL); }
		public TerminalNode RCURL(int i) {
			return getToken(KotlinLexerParser.RCURL, i);
		}
		public TerminalNode ELSE() { return getToken(KotlinLexerParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinLexerParserVisitor ) return ((KotlinLexerParserVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(IF);
			setState(124);
			match(LPAREN);
			setState(125);
			comparison();
			setState(126);
			match(RPAREN);
			setState(127);
			match(LCURL);
			setState(128);
			block();
			setState(129);
			match(RCURL);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(130);
				match(ELSE);
				setState(131);
				match(LCURL);
				setState(132);
				block();
				setState(133);
				match(RCURL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(KotlinLexerParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(KotlinLexerParser.LPAREN, 0); }
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(KotlinLexerParser.RPAREN, 0); }
		public TerminalNode LCURL() { return getToken(KotlinLexerParser.LCURL, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RCURL() { return getToken(KotlinLexerParser.RCURL, 0); }
		public WhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinLexerParserVisitor ) return ((KotlinLexerParserVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileContext while_() throws RecognitionException {
		WhileContext _localctx = new WhileContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(WHILE);
			setState(138);
			match(LPAREN);
			setState(139);
			comparison();
			setState(140);
			match(RPAREN);
			setState(141);
			match(LCURL);
			setState(142);
			block();
			setState(143);
			match(RCURL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode GE() { return getToken(KotlinLexerParser.GE, 0); }
		public TerminalNode RANGLE() { return getToken(KotlinLexerParser.RANGLE, 0); }
		public TerminalNode LE() { return getToken(KotlinLexerParser.LE, 0); }
		public TerminalNode LANGLE() { return getToken(KotlinLexerParser.LANGLE, 0); }
		public TerminalNode EQEQ() { return getToken(KotlinLexerParser.EQEQ, 0); }
		public TerminalNode EXCL_EQ() { return getToken(KotlinLexerParser.EXCL_EQ, 0); }
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).enterComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinLexerParserListener ) ((KotlinLexerParserListener)listener).exitComparison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinLexerParserVisitor ) return ((KotlinLexerParserVisitor<? extends T>)visitor).visitComparison(this);
			else return visitor.visitChildren(this);
		}
	}
